--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,9 @@
     <TextView
         android:id="@+id/numbers"
         style="@style/CategoryStyle"
-        android:background="@color/category_numbers"
-        android:text="@string/category_numbers" />
+        android:background="?android:attr/selectableItemBackground"
+        android:text="@string/category_numbers"
+        android:textColor="@android:color/black" />
 
     <TextView
         android:id="@+id/family"
